# task-10-sql

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  mypy.ini  pyproject.toml  script_start.py
.github/workflows/: test.yml
docker/: my_app.sh
migrations/: env.py
migrations/versions/: 07b90c654c9d_database_creation.py  bec7d5606f30_database_creation.py
my_app/: Dockerfile  api.py
my_app/db/: fill_random_info.py  generate_info.py  models.py  repository.py  scemas.py
my_app/routers/: course_router.py  dependencies.py  group_router.py  student_router.py
my_app/settings/: configs.py  constants.py
tests/: conftest.py  test_course.py  test_generate_info.py  test_group.py  test_repository.py  test_student.py
